few fixes in the documentation

--- a/documentation/latex/bibfile-eclipse.bib
+++ b/documentation/latex/bibfile-eclipse.bib
@@ -30,3 +30,19 @@
  year = {2007},
  OPTurl = {http://tpl.tigris.org},
 }
+
+@Misc{Xtext-website,
+ author = {{The Eclipse Foundation}},
+ title = {Xtext 2.1},
+ howpublished = {Eclipse Modeling Project / Textual Modeling Framework},
+ year = {2011},
+ note = {http://www.eclipse.org/Xtext/},
+}
+
+@Misc{Xtend-website,
+ author = {{The Eclipse Foundation}},
+ title = {Xtend 2.2},
+ howpublished = {Eclipse Modeling Project / Textual Modeling Framework},
+ year = {2011},
+ note = {http://www.eclipse.org/Xtext/xtend/},
+}
