--- a/documentation/latex/reprotool.tex
+++ b/documentation/latex/reprotool.tex
@@ -127,6 +127,8 @@
 \widowpenalty=10000 % zabrani vdovam (prvni radek odstavce na predchozi strane)
 \clubpenalty=10000 % zabrani sirotkum (posledni radek odstavce na nove strane)
 
+	\renewcommand\labelitemi{\normalfont\bfseries --}
+
 \title{
   \textbf{Requirements Processing Tool}\\
   \vspace{26pt}\includegraphics[height=5cm]{images/reprotool-logo}\\
@@ -137,8 +139,8 @@
   Jiří Vinárek,
   Ondřej Fiala,
   Rudo Tomori
-  \\\\\\\\\\
-  Supervisor: Viliam Šimko
+  \vspace*{120pt}
+  \\Supervisor: Viliam Šimko
 }
 
 \date{\small{\today}}
