--- a/documentation/latex/reprotool.tex
+++ b/documentation/latex/reprotool.tex
@@ -159,6 +159,7 @@
   \include{chapter-introduction}
   \include{chapter-architecture}
   \include{chapter-verification}
+  \include{chapter-umlExport}
   \include{chapter-linguistic}
   \include{chapter-installation}
   
