--- a/documentation/latex/reprotool.tex
+++ b/documentation/latex/reprotool.tex
@@ -108,6 +108,17 @@
  showstringspaces=false
 }
 
+\usepackage{amsthm}
+\newtheorem{definition}{Definition}
+
+% \newenvironment{definition}[1][Definition]{
+% 	\setlength{\itemsep}{0cm}
+% 	\setlength{\parskip}{0cm}
+% 	\begin{trivlist}
+% 	\item[\hskip \labelsep {\bfseries Definition: #1}]
+% 	\item
+% }{\end{trivlist}}
+
 %\usepackage{setspace}
 %\onehalfspacing
 
