added chapter-tutorial (work in progress)

--- a/documentation/latex/reprotool.tex
+++ b/documentation/latex/reprotool.tex
@@ -173,6 +173,7 @@
   \include{chapter-umlExport}
   \include{chapter-linguistic}
   \include{chapter-installation}
+  \include{chapter-tutorial}
   
 %   \include{chapter-techologies}
 %   \include{chapter-techologies}
