--- a/documentation/latex/reprotool.tex
+++ b/documentation/latex/reprotool.tex
@@ -171,6 +171,7 @@
   \include{chapter-architecture}
   \include{chapter-verification}
   \include{chapter-umlExport}
+  \include{chapter-lts}
   \include{chapter-linguistic}
   \include{chapter-installation}
   \include{chapter-tutorial}
