ctl formulas documentation

--- a/documentation/latex/bibfile-nusmv.bib
+++ b/documentation/latex/bibfile-nusmv.bib
@@ -47,3 +47,9 @@
  year = {2011},
  url = {http://code.google.com/a/eclipselabs.org/p/nusmv-tools/}
 }
+
+@misc{nusmv-manual,
+ title = {{NuSMV 2.5 User Manual}},
+ howpublished = {This document is part of the distribution package of the NuSMV model checker, available at http://nusmv.fbk.eu.}
+ url = {http://nusmv.fbk.eu/NuSMV/userman/v25/nusmv.pdf}
+}
